--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="La pagina oficial donde se presenta el proyecto de Alf la vida despues de la fama, una pagina dedicada al show, publicidad de futuras fechas, venta de merchandising y formulario de contacto">
-        <meta name="keywords" content="alf, la vida despues de la fama, spotify alf playlist, escuela de series, videos de alf, shows en vivo">
-        <title>Alf - La vida después de la fama</title>
-        <!-- Bootstrap CSS la de bootstrap va primero -->
+        <meta name="description" content="Sitio de ecommerce de muebles y todo lo necesario para renovar tu hogar.">
+        <meta name="keywords" content="ecommerce muebles, renueva tu casa, renovar hogar, bricolage, hobbies.">
+        <title>Todo para tu casa - pone al dia tu hogar</title>
         <link href="./css/bootstrap.min.css" rel="stylesheet">
-        <!--estilos hoja de estilos principal-->
-        <link rel="stylesheet" href="./SCSS/estilos.css">
+        <link href="./css/estilos.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/acaf011dda.js" crossorigin="anonymous"></script>
-        <!--favicon-->
         <script src="./main.js"></script>
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> 
         <!--animate style-->
