--- a/index.html
+++ b/index.html
@@ -16,44 +16,41 @@
     </head>
     <body>
         <header>
-            <h1>Mi tienda online</h1>
-            <nav>
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Productos</a></li>
-                    <li><a href="#">Carrito de compras</a></li>
-                    <li><a href="#">Contacto</a></li>
-                </ul>
-            </nav>
+          <h1>Bienvenido a nuestra tienda en línea</h1>
+          <nav>
+            <ul>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Productos</a></li>
+              <li><a href="#">Carrito</a></li>
+              <li><a href="#">Contacto</a></li>
+            </ul>
+          </nav>
         </header>
         <main>
-            <section>
-                <h2>Productos populares</h2>
-                <ul>
-                    <li>
-                        <h3>Producto 1</h3>
-                        <img src="producto1.jpg" alt="Producto 1">
-                        <p>Descripción del producto 1</p>
-                        <button>Agregar al carrito</button>
-                    </li>
-                    <li>
-                        <h3>Producto 2</h3>
-                        <img src="producto2.jpg" alt="Producto 2">
-                        <p>Descripción del producto 2</p>
-                        <button>Agregar al carrito</button>
-                    </li>
-                    <li>
-                        <h3>Producto 3</h3>
-                        <img src="producto3.jpg" alt="Producto 3">
-                        <p>Descripción del producto 3</p>
-                        <button>Agregar al carrito</button>
-                    </li>
-                </ul>
-            </section>
+          <h2>Productos</h2>
+          <ul>
+            <li>
+              <img src="producto1.jpg" alt="Producto 1">
+              <h3>Producto 1</h3>
+              <p>$100</p>
+              <button>Añadir al carrito</button>
+            </li>
+            <li>
+              <img src="producto2.jpg" alt="Producto 2">
+              <h3>Producto 2</h3>
+              <p>$150</p>
+              <button>Añadir al carrito</button>
+            </li>
+            <li>
+              <img src="producto3.jpg" alt="Producto 3">
+              <h3>Producto 3</h3>
+              <p>$200</p>
+              <button>Añadir al carrito</button>
+            </li>
+          </ul>
         </main>
         <footer>
-            <script> 
-                solicitarNombre()
-            </script>
+          <p>&copy; 2023 Tienda en línea</p>
         </footer>
-    </body>
+      </body>
+    </html>
