--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header>
-          <h1>Bienvenido a nuestra tienda en línea</h1>
+          <h1>Barcelona Muebles</h1>
           <nav>
             <ul>
               <li><a href="#">Inicio</a></li>
@@ -28,29 +28,55 @@
         </header>
         <main>
           <h2>Productos</h2>
-          <ul>
-            <li>
-              <img src="producto1.jpg" alt="Producto 1">
-              <h3>Producto 1</h3>
-              <p>$100</p>
-              <button>Añadir al carrito</button>
-            </li>
-            <li>
-              <img src="producto2.jpg" alt="Producto 2">
-              <h3>Producto 2</h3>
-              <p>$150</p>
-              <button>Añadir al carrito</button>
-            </li>
-            <li>
-              <img src="producto3.jpg" alt="Producto 3">
-              <h3>Producto 3</h3>
-              <p>$200</p>
-              <button>Añadir al carrito</button>
-            </li>
-          </ul>
+        <div class="container-fluid pb-5">
+            <div class="row align-items-center">
+                <div class="col-sm text-center">
+                    <img class="imgprod" src="./assets/Fotos/producto1.avif" alt="Producto 1">
+                    <h3>Cajonera</h3>
+                    <p>$100</p>
+                    <button>Añadir al carrito</button>
+                </div>
+                <div class="col-sm text-center">
+                    <img class="imgprod" src="./assets/Fotos/producto2.avif" alt="Producto 2">
+                    <h3>Cama</h3>
+                    <p>$150</p>
+                    <button>Añadir al carrito</button>
+                </div>
+                <div class="col-sm text-center">
+                    <img class="imgprod" src="./assets/Fotos/producto3.avif" alt="Producto 3">
+                    <h3>Sofa</h3>
+                    <p>$200</p>
+                    <button>Añadir al carrito</button>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid pb-5">
+          <div class="row align-items-center">
+              <div class="col-sm text-center">
+                  <img class="imgprod" src="./assets/Fotos/producto4.avif" alt="Producto 1">
+                  <h3>Silla</h3>
+                  <p>$80</p>
+                  <button>Añadir al carrito</button>
+              </div>
+              <div class="col-sm text-center">
+                  <img class="imgprod" src="./assets/Fotos/producto5.avif" alt="Producto 2">
+                  <h3>Mesa</h3>
+                  <p>$220</p>
+                  <button>Añadir al carrito</button>
+              </div>
+              <div class="col-sm text-center">
+                  <img class="imgprod" src="./assets/Fotos/producto6.avif" alt="Producto 3">
+                  <h3>Carrito auxiliar</h3>
+                  <p>$50</p>
+                  <button>Añadir al carrito</button>
+              </div>
+          </div>
+      </div>
         </main>
         <footer>
-          <p>&copy; 2023 Tienda en línea</p>
+          <div class="col-sm text-center">
+            <p>2023 Todos los derechos reservados</p>
+          </div>
         </footer>
       </body>
     </html>
