--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="./css/bootstrap.min.css" rel="stylesheet">
         <link href="./css/estilos.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/acaf011dda.js" crossorigin="anonymous"></script>
-        <script src="./main.js"></script>
+        <script src="./js/main.js"></script>
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> 
     </head>
     <body>
