--- a/index.html
+++ b/index.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Sitio de ecommerce de muebles y todo lo necesario para renovar tu hogar.">
-  <meta name="keywords" content="ecommerce muebles, renueva tu casa, renovar hogar, bricolage, hobbies.">
-  <title>Todo para tu casa - pone al día tu hogar</title>
-  <link href="./css/bootstrap.min.css" rel="stylesheet">
-  <link href="./css/estilos.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/acaf011dda.js" crossorigin="anonymous"></script>
-  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <title>Tienda de muebles</title>
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <style>
+    .imgprod {
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+    }
+
+    #carrito {
+      margin-top: 2rem;
+    }
+
+    #carrito-total {
+      font-weight: bold;
+    }
+  </style>
 </head>
+
 <body>
   <header>
-    <h1>Barcelona Muebles</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Productos</a></li>
-        <li><a href="#">Carrito</a></li>
-        <li><a href="#">Contacto</a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Barcelona Muebles</a>
     </nav>
   </header>
-  <main>
-    <h2>Productos</h2>
-    <div class="container-fluid pb-5">
-      <div class="row align-items-center">
+  <main class="container mt-4">
+    <h1>Tienda de Muebles</h1>
+    <div class="container">
+      <div class="row">
         <div class="col-sm text-center">
           <img class="imgprod" src="./assets/Fotos/producto1.avif" alt="Producto 1">
           <h3>Cajonera</h3>
@@ -47,9 +52,7 @@
           <button class="agregarProductoBtn" data-producto="producto3">Añadir al carrito</button>
         </div>
       </div>
-    </div>
-    <div class="container-fluid pb-5">
-      <div class="row align-items-center">
+      <div class="row mt-4">
         <div class="col-sm text-center">
           <img class="imgprod" src="./assets/Fotos/producto4.avif" alt="Producto 4">
           <h3>Silla</h3>
@@ -59,44 +62,43 @@
         <div class="col-sm text-center">
           <img class="imgprod" src="./assets/Fotos/producto5.avif" alt="Producto 5">
           <h3>Mesa</h3>
-          <p>$220</p>
+          <p>$120</p>
           <button class="agregarProductoBtn" data-producto="producto5">Añadir al carrito</button>
         </div>
         <div class="col-sm text-center">
           <img class="imgprod" src="./assets/Fotos/producto6.avif" alt="Producto 6">
-          <h3>Carrito auxiliar</h3>
-          <p>$50</p>
+          <h3>Carrito Auxiliar</h3>
+          <p>$250</p>
           <button class="agregarProductoBtn" data-producto="producto6">Añadir al carrito</button>
         </div>
       </div>
     </div>
-    <div id="carritoContainer">
-  <h2>Carrito de compras</h2>
-  <table id="carritoItems" class="carrito-items">
-    <thead>
-      <tr>
-        <th>Imagen</th>
-        <th>Producto</th>
-        <th>Precio</th>
-        <th>Cantidad</th>
-        <th>Subtotal</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-  <div id="totalContainer" class="carrito-total"></div>
-  <div>
-    <button id="vaciarCarritoBtn" class="vaciar-carrito-btn">Vaciar carrito</button>
-  </div>
-</div>
+    <div id="carrito" class="mt-4">
+      <h2>Carrito de compras</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Imagen</th>
+            <th>Producto</th>
+            <th>Precio</th>
+            <th>Cantidad</th>
+            <th>Subtotal</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody id="carrito-items">
+        </tbody>
+        <tfoot>
+          <tr>
+            <th colspan="4">Total:</th>
+            <th id="carrito-total"></th>
+            <th></th>
+          </tr>
+        </tfoot>
+      </table>
+      <button id="vaciar-carrito" class="btn btn-danger">Vaciar carrito</button>
     </div>
   </main>
-  <footer>
-    <div class="col-sm text-center">
-      <p>2023 Todos los derechos reservados</p>
-    </div>
-  </footer>
   <script src="./js/main.js"></script>
 </body>
 </html>
