--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     </nav>
   </header>
   <main class="container mt-4">
-    <h1>Tienda de Muebles</h1>
+    <div class="row">
+      <div class="col-sm text-center"><h1>Tienda de Muebles</h1></div>
+      <div class="col-sm text-center"><ul class="col-sm text-center" id="datos-clima"></ul></div>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-sm text-center">
