--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       <button id="vaciar-carrito" class="btn btn-danger">Vaciar carrito</button>
     </div>
   </main>
+  <script src="https://unpkg.com/js-alert/dist/jsalert.min.js"></script>
   <script src="./js/main.js"></script>
 </body>
 </html>
